交叉判定問題まで

--- a/chukan/abst_chukan/syuron_abst_M2sato.tex
+++ b/chukan/abst_chukan/syuron_abst_M2sato.tex
@@ -29,6 +29,7 @@
 ‚Ð‚Æ‚Â‚Æ‚µ‚Ä$CONGEST$ƒ‚ƒfƒ‹‚ª‘¶Ý‚·‚é.$CONGEST$ƒ‚ƒfƒ‹‚É‚¨‚¢‚Ä,Šeƒm[ƒh‚Í“¯Šú‚µ‚Ä“¯‚¶ƒAƒ‹ƒSƒŠƒYƒ€‚ð
 ŽÀs‚µ‚Ä“ü—ÍƒOƒ‰ƒtã‚Ì–â‘è‚ð‰ðŒˆ‚·‚é.Šeƒm[ƒh‚ÍŠeƒ‰ƒEƒ“ƒh‚Å(i)$b$ƒrƒbƒg‚ÌƒƒbƒZ[ƒW‚ð‹ß–T‚É‘—M‚µ,
 (ii)‹ß–T‚©‚çƒƒbƒZ[ƒW‚ðŽóM‚µ,(iii)“à•”ŒvŽZ‚ðs‚¤.ˆê”Ê‚É,$b = \log n$‚ð‘z’è‚·‚é.
+%‚±‚±‚ç‚Ö‚ñ‚ ‚¢‚Ü‚¢
 %$CONGEST$ƒ‚ƒfƒ‹‚É‚¨‚¯‚é‘g‚Ý‡‚í‚¹Å“K‰»–â‘è‚ðl‚¦‚é‚É‚ ‚½‚è,‚ ‚é1‚Â‚Ì’¸“_‚ÉƒOƒ‰ƒt‘S‘Ì‚Ìƒgƒ|ƒƒW‚Ìî•ñ‚ðW‚ß,
 %‚»‚Ì’¸“_‚ÅƒAƒ‹ƒSƒŠƒYƒ€‚ðŽÀs‚·‚é‚Æ‚¢‚¤ƒAƒvƒ[ƒ`‚Å‚ÍŽ©–¾‚É$\Omega (n^{2})$ƒ‰ƒEƒ“ƒh‚ÌŽÀsŽžŠÔ‚ð•K—v‚Æ‚·‚é.(H)
 %‚±‚ê‚Í$CONGEST$ƒ‚ƒfƒ‹‚É‚¨‚¢‚Ä’ÊMƒŠƒ“ƒN‚Ì‘Ñˆæ•‚ª§ŒÀ‚³‚ê‚Ä‚¢‚é‚±‚Æ‚É‚æ‚é‚à‚Ì‚Å‚ ‚è,‚±‚ÌƒAƒvƒ[ƒ`‚ð—p‚¢‚¸‚É
@@ -61,6 +62,33 @@ $k$-MIS$‚Æ‚¢‚¢,k$-MIS–â‘è‚ÍW’†Œ^ƒAƒ‹ƒSƒŠƒYƒ€‚É‚æ‚Á‚Ä‘½€Ž®ŽžŠÔ‚Å‰ð‚­‚±‚Æ‚ª‚Å‚«‚
 ÅŒã‚É,3-MISŒŸØ–â‘è‚É‘Î‚·‚éƒAƒ‹ƒSƒŠƒYƒ€‚Ì$\Omega (n)$ƒ‰ƒEƒ“ƒh‚Ì‰ºŒÀ‚ð’ñˆÄ‚µ,‚»‚ê‚ðˆê”Ê‚Ì$k$-MIS‚É
 Šg’£‚Å‚«‚È‚¢‚©‚ðl‚¦‚é.Œã”¼‚Ì2‚Â‚ÉŠÖ‚µ‚Ä‚Í“ñŽÒŠÔ’ÊM•¡ŽG«‚©‚ç‚Ì‹A’…‚ð—p‚¢‚Ä‚¢‚é.
 
-“ñŽÒŠÔ’ÊM•¡ŽG«‚Æ‚Í...
+
+\section{”’è‹`}
+\subsection*{$CONGEST$ƒ‚ƒfƒ‹}
+–{e‚Ål‚¦‚é$CONGEST$ƒ‚ƒfƒ‹‚Í,’Pƒ–³ŒüƒOƒ‰ƒt˜AŒ‹ƒOƒ‰ƒt$G = (V, E)$‚É‚æ‚è•\Œ»‚³‚ê‚é.‚±‚±‚Å$V$‚Íƒm[ƒh‚ÌW‡‚Å
+$|V| = n$‚Æ‚µ,$E$‚Í’ÊMƒŠƒ“ƒN‚ÌW‡‚Å‚ ‚é.$CONGEST$ƒ‚ƒfƒ‹‚Å‚ÍŒvŽZ‹@‚Íƒ‰ƒEƒ“ƒh‚É]‚Á‚Ä“¯Šú‚µ‚Ä“®ì‚·‚é‚à‚Ì‚Æ‚·‚é.
+1ƒ‰ƒEƒ“ƒh“à‚Å,—×Ú’¸“_‚Ö‚ÌƒƒbƒZ[ƒW‘—M,—×Ú’¸“_‚©‚ç‚ÌƒƒbƒZ[ƒWŽóM,“à•”ŒvŽZ‚ðs‚¤.Še•Ó‚Í’PˆÊƒ‰ƒEƒ“ƒh‚ ‚½‚è
+$O(\log n)$ƒrƒbƒg‚ð‘o•ûŒü‚É“`‘—‰Â”\‚Å‚ ‚è,Šeƒm[ƒh‚Í“¯ˆêƒ‰ƒEƒ“ƒh‚ÉˆÙ‚È‚éÚ‘±•Ó‚ÉˆÙ‚È‚éƒƒbƒZ[ƒW‚ð‘—M‰Â”\‚Å‚ ‚é.
+‚Ü‚½,Šeƒm[ƒh‚É‚Í$O(\log n)$ƒrƒbƒg‚ÌŽ©‘R”’l‚É‚æ‚éID‚ª•t—^‚³‚ê‚Ä‚¨‚è,Ž©g‚Ì—×Úƒm[ƒh‚·‚×‚Ä‚ÌID‚ðŠù’m‚Å‚ ‚é‚Æ‚·‚é.
+Šeƒm[ƒh‚ÍƒOƒ‰ƒt‚Ìƒgƒ|ƒƒW‚ÉŠÖ‚·‚éŽ–‘O’mŽ¯‚ðŽ‚½‚È‚¢‚à‚Ì‚Æ‚·‚é.
+
+\subsection*{“ñŽÒŠÔ’ÊM•¡ŽG«}
+“ñŽÒŠÔ’ÊM•¡ŽG«‚Ì˜g‘g‚Ý‚Å‚Í,ƒAƒŠƒX‚Æƒ{ƒu‚Ì“ñl‚ÌƒvƒŒƒCƒ„[‚ª‚»‚ê‚¼‚ê$n$ƒrƒbƒg‚Ì0/1‚Ìƒf[ƒ^—ñ‚Å\¬‚³‚ê‚é
+ƒvƒ‰ƒCƒx[ƒg‚È“ü—Í$X$‚¨‚æ‚Ñ$Y$‚ðŽ‚Á‚Ä‚¢‚é‚Æ‚·‚é.ƒvƒŒƒCƒ„[‚Ì–Ú•W‚Í,Œ‹‡ŠÖ”$f(X, Y)$‚ðŒvŽZ‚·‚é‚±‚Æ‚Å‚ ‚è,
+•¡ŽG«‚ÌŽÚ“x‚Æ‚µ‚Ä$f(X, Y)$‚ðŒvŽZ‚·‚é‚½‚ß‚ÉƒAƒŠƒX‚Æƒ{ƒu‚ª’ÊM‚É‚æ‚Á‚ÄŒðŠ·‚·‚é•K—v‚Ì‚ ‚éƒrƒbƒg”‚ª—p‚¢‚ç‚ê‚é.
+
+‚±‚Ì˜g‘g‚Ý‚É‚¨‚¯‚éd—v‚È–â‘è‚Æ‚µ‚Ä,Œð³”»’è–â‘è(set-disjointness)‚ª‚ ‚é.‚±‚Ì–â‘è‚Å‚Í,ƒAƒŠƒX‚Æƒ{ƒu‚Í
+‚»‚ê‚¼‚ê$X \in \{0, 1\}^{n}$‚Æ$Y \in \{0, 1\}^{n}$‚ð“ü—Í‚Æ‚µ‚ÄŽ‚¿,–Ú“I‚Í
+$DISJ_{n} (X, Y) :=\bigwedge_{i = 1}^{n} X_{i} \land Y_{i}$‚ðŒvŽZ‚·‚é‚±‚Æ‚Å‚ ‚é.nƒrƒbƒg‚ÌŒð³”»’è–â‘è‚ð‰ð‚­‚½‚ß‚É,
+ƒAƒŠƒX‚Æƒ{ƒu‚Í’ÊM‚É‚æ‚Á‚Ä$\Omega (n)$ƒrƒbƒgŒðŠ·‚·‚é•K—v‚ª‚ ‚é‚±‚Æ‚ª’m‚ç‚ê‚Ä‚¨‚è,‚±‚ÌŽ–ŽÀ‚ð—p‚¢‚Ä
+Å¬‘Sˆæ–Ø‚âÅ¬ƒJƒbƒg,•”•ªƒOƒ‰ƒtŒŸo‚â‹ßŽ—Å‘åƒNƒŠ[ƒN‚Æ‚¢‚Á‚½‚³‚Ü‚´‚Ü‚È–â‘è‚É‘Î‚·‚é‰ºŒÀ‚ÌØ–¾‚ª‚³‚ê‚Ä‚¢‚é.
+
+
+
+
+
+
+
+
 \end{document}
 
