アブスト諸定義まで

--- a/chukan/abst_chukan/syuron_abst_M2sato.tex
+++ b/chukan/abst_chukan/syuron_abst_M2sato.tex
@@ -83,7 +83,13 @@ $DISJ_{n} (X, Y) :=\bigwedge_{i = 1}^{n} X_{i} \land Y_{i}$を計算することである.
 アリスとボブは通信によって$\Omega (n)$ビット交換する必要があることが知られており,この事実を用いて
 最小全域木や最小カット,部分グラフ検出や近似最大クリークといったさまざまな問題に対する下限の証明がされている.
 
+\subsection*{独立集合}
+各頂点が隣接していない頂点部分集合を独立集合という.ネットワークにおける独立集合のうち,最大独立集合とは次のものを指す.
+(i)重みなしグラフにおいて,頂点数が最も多い独立集合.(ii)重み付きグラフにおいて,合計重みが最も大きい独立集合.
 
+極大独立集合とは,これ以上ネットーワーク上の頂点を集合に追加できない独立集合である.$k$-極大独立集合とは
+独立集合のうち,任意の$k$個の頂点をその集合から取り除いて独立集合を維持したまま$k + 1$個の頂点を追加することが
+できないものである.つまり,極大独立集合は0-MISと同じ意味である.
 
 
 
