12/11ミーティングを受けて修正

--- a/chukan/abst_chukan/syuron_abst_M2sato.tex
+++ b/chukan/abst_chukan/syuron_abst_M2sato.tex
@@ -8,6 +8,8 @@
 
 \usepackage{multicol}
 
+\newtheorem{dfn}{定義}[section]
+
 \修了年度{2}
 %\入学年度{平成20年度}　　　	
 
@@ -27,40 +29,42 @@
 分散グラフアルゴリズムとは,計算機を頂点,辺を通信リンクとみなしてネットワークをモデル化したグラフ上において,
 そのネットワーク自身を入力として様々な問題を解く枠組みである.分散アルゴリズムにおける代表的なモデルの
 ひとつとして$CONGEST$モデルが存在する.$CONGEST$モデルにおいて,各ノードは同期して同じアルゴリズムを
-実行して入力グラフ上の問題を解決する.各ノードは各ラウンドで(i)$b$ビットのメッセージを近傍に送信し,
-(ii)近傍からメッセージを受信し,(iii)内部計算を行う.一般に,$b = \log n$を想定する.
-%ここらへんあいまい
-%$CONGEST$モデルにおける組み合わせ最適化問題を考えるにあたり,ある1つの頂点にグラフ全体のトポロジの情報を集め,
-%その頂点でアルゴリズムを実行するというアプローチでは自明に$\Omega (n^{2})$ラウンドの実行時間を必要とする.(？)
-%これは$CONGEST$モデルにおいて通信リンクの帯域幅が制限されていることによるものであり,このアプローチを用いずに
-%各ノードが協力して問題を解くアルゴリズムを構成できるかに興味がもたれている. 
+実行して入力グラフ上の問題を解決する.各ノードは各ラウンドで(i)$b$ビットのメッセージを隣接ノードに送信
+(ii)隣接ノードからメッセージを受信(iii)内部計算の3つの動作をする.標準的には,$b = \log n$を想定する.
+$CONGEST$モデルにおいて,ある1つのノードにグラフ全体のトポロジの情報を集め,そのノード上で
+逐次アルゴリズムを実行するという素朴なアプローチから自明に$O (n^{2})$ラウンドの上界を得ることができる.$CONGEST$モデルにおける下界の証明では,下界をこの$n^{2}$にどれだけ近づけることができるかに興味がもたれている.
 
-組み合わせ最適化問題の一つである最大独立集合の分散アルゴリズムに対する多くの研究がされている.
-各頂点が隣接していない頂点部分集合を独立集合といい,最大独立集合とは重みなしグラフにおいては
-頂点数が最も多い独立集合,重み付きグラフにおいては合計重みが最も大きい独立集合である.
-最大独立集合の複雑性としては,頂点の最大次数を$\Delta$としたとき,最大重み付き独立集合の
-$(1 + \epsilon) \cdot \Delta$-近似を高確率で見つけるアルゴリズムに対する$(\frac{poly(\log \log n)}{\epsilon})$
-ラウンドの上限や,最大独立集合の$(\frac{1}{2} + \epsilon)$-近似を見つけるアルゴリズムに対する
-$\Omega (\frac{n}{(\log n)^{3}})$ラウンドの下限が知られている.
+ネットワーク上の最大独立集合を発見する最大独立集合問題に対する数多くの分散グラフアルゴリズムが
+研究されている.各頂点が隣接していない頂点部分集合を独立集合といい,最大独立集合とは
+頂点数が最も多い独立集合である.大きなサイズの独立集合は経済学,計算生物学,符号理論,実験計画法など
+様々な分野への応用に用いられるが,そもそも最大独立集合問題はNP完全であり,頂点数$n$に対して
+$n$の多項式時間で解くことは,その近似を含めて絶望的であるとされている.内部計算に指数時間かかることを
+許した$CONGEST$モデルの下でラウンド数を$n$の多項式でおさえるような最大独立集合の複雑性としては,
+頂点の最大次数を$\Delta$としたとき,最大重み付き独立集合の$(1 + \epsilon) \cdot \Delta$-近似を高確率で
+見つけるアルゴリズムに対する$(\frac{poly(\log \log n)}{\epsilon})$ラウンドの上界や,最大独立集合の
+$(\frac{1}{2} + \epsilon)$-近似を見つけるアルゴリズムに対する$\Omega (\frac{n}{(\log n)^{3}})$ラウンドの下界,
+$(\frac{3}{4} + \epsilon)$-近似を見つけるアルゴリズムに対する$\Omega (\frac{n^{2}}{(\log n)^{3}})$ラウンドの下界が
+知られている.
 
-大きなサイズの独立集合は経済学,計算生物学,符号理論,実験計画法など様々な分野への応用に用いられるが,
-そもそも最大独立集合問題はNP完全であり,頂点数$n$に対して$n$の多項式時間で解くことは,その近似を含めて
-絶望的であるとされている.分散化によって近似アルゴリズムの複雑性の議論を行っても,(iii)の内部計算に指数時間
-必要とするためこの議論の妥当性にはやや疑問が残る.そこで今回,我々は最大独立集合の局所最適解である
-$k$-極大独立集合($k$-Maximal Independet Set, $k$-MIS)について考える.独立集合のうち,$k$個の頂点を
+しかし,内部計算に指数時間かかることを許した下での分散グラフアルゴリズムの複雑性の議論の妥当性には
+やや疑問が残る.そこで今回,我々は最大独立集合の局所最適解である$k$-極大独立集合
+($k$-Maximal Independet Set, $k$-MIS)について考える.独立集合のうち,$k$個の頂点を
 その集合から取り除いて独立集合を維持したまま$k + 1$個以上の頂点を追加することができないとき,その独立集合を
-$k$-MIS$といい,k$-MIS問題は集中型アルゴリズムによって多項式時間で解くことができる.
+$k$-MISといい,ネットワーク上の$k$-MISを発見する$k$-MIS問題は集中型アルゴリズムによって$O(n^{k + 2})$時間で
+解くことができる.これは,$k = O(1)$のとき$n$の多項式時間になる.
 
-今回は$k$-MISの検証問題(verification)に着目し,その複雑性について議論を行った.$k$-MIS問題に対する一般的な
-アプローチは,ある1つの独立集合からスタートし,(I)現在の状態が$k$-MISであるか判定する.(II)$k$-MISであればそれを出力,
-そうでなければ状態を更新.というフェーズを含む.$k$-MIS検証問題とはネットワーク上に独立集合が与えられ,それが$k$-MISか
-どうかを判定する問題であり,(I)に対応しているため,$k$-MIS問題と関連付けることができる.
+今回は$k$-MISの検証問題(verification)に着目し,その複雑性について議論を行う.
+$k$-MIS検証問題とはネットワーク上に独立集合が与えられ,それが$k$-MISかどうかを判定する問題である.
+$k$-MIS問題に対する素朴な局所探索アルゴリズムは,ある1つの独立集合からスタートし,
+(I)現在の状態が$k$-MISであるか判定する.
+(II)YESであればそれを出力,NOであれば解を更新,というフェーズを繰り返す.
+$k$-MIS検証問題は上記の(I)に対応しており,$k$-MIS問題と関連付いた問題ととらえることができる.
 
-今回,我々は3つの極大独立集合検証問題に対する複雑性の結果を提案する.
-最初に,1-MIS検証問題に対する$O(1)$ラウンドアルゴリズムを提案する.
-次に,2-MIS検証問題に対するアルゴリズムの$\Omega (\sqrt{n})$ラウンドの下限を提案する.
-最後に,3-MIS検証問題に対するアルゴリズムの$\Omega (n)$ラウンドの下限を提案し,それを一般の$k$-MISに
-拡張できないかを考える.後半の2つに関しては二者間通信複雑性からの帰着を用いている.
+今回,我々は極大独立集合検証問題に対する3つの複雑性の結果を証明する.
+最初に,1-MIS検証問題が$O(1)$ラウンドで解けることを証明する.
+次に,2-MIS検証問題に対する$\Omega (\sqrt{n})$ラウンドの下界を証明する.
+最後に,3-MIS検証問題に対する$\Omega (n)$ラウンドの下界を証明する.この下界を一般の$k$に
+拡張できないかを現在検討中である.後半の2つの証明のアイデアは二者間通信複雑性からの帰着に基づいている.
 
 
 \section{諸定義}
@@ -83,18 +87,20 @@ $DISJ_{n} (X, Y) :=\bigwedge_{i = 1}^{n} X_{i} \land Y_{i}$を計算することである.
 アリスとボブは通信によって$\Omega (n)$ビット交換する必要があることが知られており,この事実を用いて
 最小全域木や最小カット,部分グラフ検出や近似最大クリークといったさまざまな問題に対する下限の証明がされている.
 
-\subsection*{独立集合}
-各頂点が隣接していない頂点部分集合を独立集合という.ネットワークにおける独立集合のうち,最大独立集合とは次のものを指す.
-(i)重みなしグラフにおいて,頂点数が最も多い独立集合.(ii)重み付きグラフにおいて,合計重みが最も大きい独立集合.
+\subsection*{$k$-極大独立集合}
+\begin{dfn}
+$I$が$k$-極大独立集合 $ \Leftrightarrow$ \\
+\begin{math}
+\lnot \left( \exists I' \subseteq I |I'| = k,  \\ \exists S \subseteq V |S|\geq k + 1, (I\setminus I')\cap Sが独立集合 \right)
+\end{math}
+\end{dfn}
 
-極大独立集合とは,これ以上ネットーワーク上の頂点を集合に追加できない独立集合である.$k$-極大独立集合とは
-独立集合のうち,任意の$k$個の頂点をその集合から取り除いて独立集合を維持したまま$k + 1$個の頂点を追加することが
-できないものである.つまり,極大独立集合は0-MISと同じ意味である.
-
-
-
-
-
+\section{結果}
+aaa
+\section{今後の課題}
+bbb
+\section*{参考文献}
+ccc
 
 \end{document}
 
