--- a/chukan/abst_chukan/syuron_abst_M2sato.tex
+++ b/chukan/abst_chukan/syuron_abst_M2sato.tex
@@ -1,5 +1,5 @@
 \documentclass[10pt]{abstract}
-
+\bibliographystyle{unsrt}
 \usepackage{times,mathptmx} %綺麗だけど，PDF化時に出力されないかも?
 %\usepackage[varg]{txfonts} %まぁフォントはお好みで
 \usepackage{graphicx} %図を挿入したい場合に使用
@@ -37,14 +37,14 @@ $CONGEST$モデルにおいて,ある1つのノードにグラフ全体のトポロジの情報を集め,そのノ
 ネットワーク上の最大独立集合を発見する最大独立集合問題に対する数多くの分散グラフアルゴリズムが
 研究されている.各頂点が隣接していない頂点部分集合を独立集合といい,最大独立集合とは
 頂点数が最も多い独立集合である.大きなサイズの独立集合は経済学,計算生物学,符号理論,実験計画法など
-様々な分野への応用に用いられるが,そもそも最大独立集合問題はNP完全であり,頂点数$n$に対して
+様々な分野への応用に用いられる \cite{kawarabayashi2019improved} が,そもそも最大独立集合問題はNP完全であり,頂点数$n$に対して
 $n$の多項式時間で解くことは,その近似を含めて絶望的であるとされている.内部計算に指数時間かかることを
 許した$CONGEST$モデルの下でラウンド数を$n$の多項式でおさえるような最大独立集合の複雑性としては,
 頂点の最大次数を$\Delta$としたとき,最大重み付き独立集合の$(1 + \epsilon) \cdot \Delta$-近似を高確率で
-見つけるアルゴリズムに対する$(\frac{poly(\log \log n)}{\epsilon})$ラウンドの上界や,最大独立集合の
-$(\frac{1}{2} + \epsilon)$-近似を見つけるアルゴリズムに対する$\Omega (\frac{n}{(\log n)^{3}})$ラウンドの下界,
-$(\frac{3}{4} + \epsilon)$-近似を見つけるアルゴリズムに対する$\Omega (\frac{n^{2}}{(\log n)^{3}})$ラウンドの下界が
-知られている.
+見つけるアルゴリズムに対する$(\frac{poly(\log \log n)}{\epsilon})$ラウンドの上界 \cite{kawarabayashi2019improved} や,
+最大独立集合の$(\frac{1}{2} + \epsilon)$-近似を見つけるアルゴリズムに対する$\Omega (\frac{n}{(\log n)^{3}})$ラウンドの下界,
+$(\frac{3}{4} + \epsilon)$-近似を見つけるアルゴリズムに対する$\Omega (\frac{n^{2}}{(\log n)^{3}})$ラウンドの下界
+ \cite{efron2020beyond} が知られている.
 
 しかし,内部計算に指数時間かかることを許した下での分散グラフアルゴリズムの複雑性の議論の妥当性には
 やや疑問が残る.そこで今回,我々は最大独立集合の局所最適解である$k$-極大独立集合
@@ -85,7 +85,8 @@ $O(\log n)$ビットを双方向に伝送可能であり,各ノードは同一ラウンドに異なる接続辺に
 それぞれ$X \in \{0, 1\}^{n}$と$Y \in \{0, 1\}^{n}$を入力として持ち,目的は
 $DISJ_{n} (X, Y) :=\bigwedge_{i = 1}^{n} X_{i} \land Y_{i}$を計算することである.nビットの交叉判定問題を解くために,
 アリスとボブは通信によって$\Omega (n)$ビット交換する必要があることが知られており,この事実を用いて
-最小全域木や最小カット,部分グラフ検出や近似最大クリークといったさまざまな問題に対する下限の証明がされている.
+最小全域木や最小カット,部分グラフ検出や近似最大クリークといったさまざまな問題に対する下界の証明がされている 
+\cite{efron2020beyond} .
 
 \subsection*{$k$-極大独立集合}
 \begin{dfn}
@@ -99,8 +100,8 @@ $I$が$k$-極大独立集合 $ \Leftrightarrow$ \\
 aaa
 \section{今後の課題}
 bbb
-\section*{参考文献}
-ccc
+
+\bibliography{M2sato}
 
 \end{document}
 
