グラフ関連以外だいたい書いた

--- a/chukan/abst_chukan/M2sato.bib
+++ b/chukan/abst_chukan/M2sato.bib
@@ -10,3 +10,28 @@
   journal={arXiv preprint arXiv:2003.07427},
   year={2020}
 }
+@inproceedings{ghaffari2013distributed,
+  title={Distributed minimum cut approximation},
+  author={Ghaffari, Mohsen and Kuhn, Fabian},
+  booktitle={International Symposium on Distributed Computing},
+  pages={1--15},
+  year={2013},
+  organization={Springer}
+}
+@inproceedings{fischer2018possibilities,
+  title={Possibilities and impossibilities for distributed subgraph detection},
+  author={Fischer, Orr and Gonen, Tzlil and Kuhn, Fabian and Oshman, Rotem},
+  booktitle={Proceedings of the 30th on Symposium on Parallelism in Algorithms and Architectures},
+  pages={153--162},
+  year={2018}
+}
+@article{czumaj2020detecting,
+  title={Detecting cliques in CONGEST networks},
+  author={Czumaj, Artur and Konrad, Christian},
+  journal={Distributed Computing},
+  volume={33},
+  number={6},
+  pages={533--543},
+  year={2020},
+  publisher={Springer}
+}
