--- a/chukan/abst_chukan/syuron_abst_M2sato.tex
+++ b/chukan/abst_chukan/syuron_abst_M2sato.tex
@@ -2,10 +2,10 @@
 \bibliographystyle{unsrt}
 \usepackage{times,mathptmx} %綺麗だけど，PDF化時に出力されないかも?
 %\usepackage[varg]{txfonts} %まぁフォントはお好みで
-\usepackage{graphicx} %図を挿入したい場合に使用
+%\usepackage{graphicx} %図を挿入したい場合に使用
 %\usepackage{wrapfig} %文章が回りこむように図を挿入したい場合に使用
 \usepackage{nidanfloat} %ぶち抜きで図を挿入したい場合に使用
-
+\usepackage[dvipdfmx]{graphicx, color}
 \usepackage{multicol}
 
 \newtheorem{dfn}{定義}[section]
@@ -62,9 +62,9 @@ $k$-MIS検証問題は上記の(I)に対応しており,$k$-MIS問題と関連付いた問題ととらえるこ
 
 今回,我々は極大独立集合検証問題に対する3つの複雑性の結果を証明する.
 最初に,1-MIS検証問題が$O(1)$ラウンドで解けることを証明する.
-次に,2-MIS検証問題に対する$\Omega (\sqrt{n})$ラウンドの下界を証明する.
-最後に,3-MIS検証問題に対する$\Omega (n)$ラウンドの下界を証明する.この下界を一般の$k$に
-拡張できないかを現在検討中である.後半の2つの証明のアイデアは二者間通信複雑性からの帰着に基づいている.
+次に,2-MIS検証問題に対する$\tilde{\Omega} (\sqrt{n})$ラウンドの下界を証明する.
+最後に,3-MIS検証問題に対する$\tilde{\Omega} (n)$ラウンドの下界を証明する.この下界を一般の$k$に
+拡張できないかを現在検討中である.後半の2つの証明のアイデアは2者間通信複雑性からの帰着に基づいている.
 
 
 \section{諸定義}
@@ -76,8 +76,8 @@ $O(\log n)$ビットを双方向に伝送可能であり,各ノードは同一ラウンドに異なる接続辺に
 また,各ノードには$O(\log n)$ビットの自然数値によるIDが付与されており,自身の隣接ノードすべてのIDを既知であるとする.
 各ノードはグラフのトポロジに関する事前知識を持たないものとする.
 
-\subsection*{二者間通信複雑性}
-二者間通信複雑性の枠組みでは,アリスとボブの二人のプレイヤーがそれぞれ$n$ビットの0/1のデータ列で構成される
+\subsection*{2者間通信複雑性}
+2者間通信複雑性の枠組みでは,アリスとボブの二人のプレイヤーがそれぞれ$n$ビットの0/1のデータ列で構成される
 プライベートな入力$X$および$Y$を持っているとする.プレイヤーの目標は,結合関数$f(X, Y)$を計算することであり,
 複雑性の尺度として$f(X, Y)$を計算するためにアリスとボブが通信によって交換する必要のあるビット数が用いられる.
 
@@ -85,8 +85,8 @@ $O(\log n)$ビットを双方向に伝送可能であり,各ノードは同一ラウンドに異なる接続辺に
 それぞれ$X \in \{0, 1\}^{n}$と$Y \in \{0, 1\}^{n}$を入力として持ち,目的は
 $DISJ_{n} (X, Y) :=\bigwedge_{i = 1}^{n} X_{i} \land Y_{i}$を計算することである.nビットの交叉判定問題を解くために,
 アリスとボブは通信によって$\Omega (n)$ビット交換する必要があることが知られており,この事実を用いて
-最小全域木や最小カット,部分グラフ検出や近似最大クリークといったさまざまな問題に対する下界の証明がされている 
-\cite{efron2020beyond} .
+最小カット発見 \cite{ghaffari2013distributed} や部分グラフ検出 \cite{fischer2018possibilities} ,
+近似最大クリーク検出 \cite{czumaj2020detecting} といったさまざまな問題に対する下界の証明がされている.
 
 \subsection*{$k$-極大独立集合}
 \begin{dfn}
@@ -97,9 +97,37 @@ $I$が$k$-極大独立集合 $ \Leftrightarrow$ \\
 \end{dfn}
 
 \section{結果}
-aaa
+スペースの都合上,3つの結果のうち,3-MIS検証問題に対する$\Omega (n)$ラウンドの下界の証明の概要を記載する.
+
+3-MIS検証問題を交叉判定問題から帰着する流れは次のとおりである.最初にアリスとボブ特殊なグラフ$G = (V, E)$の構築と
+$G$を$G_{A}=(V_{A}, E_{A})とG_{B}=(V_{B}, E_{B})$に分割するカット辺$C$の決定を行う.次に,アリスとボブは入力文字列に基づいて
+それぞれ$G_{A}$と$G_{B}$に辺を追加する.ここで,カット辺$C$は入力文字列に依存しない.グラフ$G$に辺を追加したグラフを
+$G' = (V, E')$とすると,「$G'$中に与えられている独立集合が,$DISJ_{n} (X, Y) = 1$のときのみ3-MISでない」という特性を
+持つように構築を行う.グラフ$G'$を図 \ref{lowerboundgraph}に示す.
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=80mm]{testpic.png}
+\end{center}
+\caption{G'(V, E')}
+\label{lowerboundgraph}
+\end{figure}
+
+今回,$N \times N$ビットの交叉判定インスタンスをグラフに埋め込んでおり,カット辺のサイズ$|C| = 3N$であることがわかる.
+アリスとボブは,このグラフ上に与えられた独立集合が3-MISであるかどうかを判定する分散アルゴリズムをシミュレートできる.
+2者間通信複雑性モデルでのシミュレートは,次のように実行される.$G_{A}$中の辺で送信されるメッセージ,あるいは
+$G_{B}$中の辺で送信されるメッセージは,アリスとボブがそれぞれお互いと通信せずにシミュレートできる.カット辺$C$を通じて
+送信されるメッセージに対しては,お互い情報を交換する必要がある.$CONGEST$モデルにおいてグラフ上に与えられた
+独立集合が3-MISであるかどうかを$r$ラウンドで判定するアルゴリズム$\mathcal{A}$が存在したとすると,アリスとボブは
+$O(r \cdot |C| \cdot b)$ビット通信したことになる.このグラフにおいてアルゴリズム$\mathcal{A}$を実行すると同時に
+2者間交叉判定問題も解けていることになるので,交叉判定問題の通信複雑性よりアリスとボブは少なくとも
+$\Omega (N \times N)$ビットは通信しているはずである.したがって,$r = \Omega (N/3b) = \tilde{\Omega}(n)$ラウンドの
+下界を得ることができる.
+
 \section{今後の課題}
-bbb
+現在,3-MIS検証問題に対する$\tilde{\Omega}(n)$ラウンドの下界を一般の$k$に拡張できないか検討中である.
+それに加えて,3つの結果に対する直感的な証明が思い浮かんでいる程度にとどまっているので,
+それを定式化してフォーマルな証明を書くことができるようにする必要がある.
 
 \bibliography{M2sato}
 
