アブスト一通り完成

--- a/chukan/abst_chukan/syuron_abst_M2sato.tex
+++ b/chukan/abst_chukan/syuron_abst_M2sato.tex
@@ -35,11 +35,13 @@ $CONGEST$モデルにおいて,ある1つのノードにグラフ全体のトポロジの情報を集め,そのノ
 逐次アルゴリズムを実行するという素朴なアプローチから自明に$O (n^{2})$ラウンドの上界を得ることができる.$CONGEST$モデルにおける下界の証明では,下界をこの$n^{2}$にどれだけ近づけることができるかに興味がもたれている.
 
 ネットワーク上の最大独立集合を発見する最大独立集合問題に対する数多くの分散グラフアルゴリズムが
-研究されている.各頂点が隣接していない頂点部分集合を独立集合といい,最大独立集合とは
-頂点数が最も多い独立集合である.大きなサイズの独立集合は経済学,計算生物学,符号理論,実験計画法など
-様々な分野への応用に用いられる \cite{kawarabayashi2019improved} が,そもそも最大独立集合問題はNP完全であり,頂点数$n$に対して
+研究されている.
+%各頂点が隣接していない頂点部分集合を独立集合といい,最大独立集合とは頂点数が最も多い独立集合である.
+大きなサイズの独立集合は経済学,計算生物学,符号理論,実験計画法など
+様々な分野への応用に用いられる \cite{kawarabayashi2019improved} が,そもそも
+最大独立集合問題はNP完全であり,頂点数$n$に対して
 $n$の多項式時間で解くことは,その近似を含めて絶望的であるとされている.内部計算に指数時間かかることを
-許した$CONGEST$モデルの下でラウンド数を$n$の多項式でおさえるような最大独立集合の複雑性としては,
+許した$CONGEST$モデルの下でラウンド数を$n$の多項式でおさえるような最大独立集合問題の複雑性としては,
 頂点の最大次数を$\Delta$としたとき,最大重み付き独立集合の$(1 + \epsilon) \cdot \Delta$-近似を高確率で
 見つけるアルゴリズムに対する$(\frac{poly(\log \log n)}{\epsilon})$ラウンドの上界 \cite{kawarabayashi2019improved} や,
 最大独立集合の$(\frac{1}{2} + \epsilon)$-近似を見つけるアルゴリズムに対する$\Omega (\frac{n}{(\log n)^{3}})$ラウンドの下界,
@@ -48,10 +50,11 @@ $(\frac{3}{4} + \epsilon)$-近似を見つけるアルゴリズムに対する$\Omega (\frac{n^{2
 
 しかし,内部計算に指数時間かかることを許した下での分散グラフアルゴリズムの複雑性の議論の妥当性には
 やや疑問が残る.そこで今回,我々は最大独立集合の局所最適解である$k$-極大独立集合
-($k$-Maximal Independet Set, $k$-MIS)について考える.独立集合のうち,$k$個の頂点を
-その集合から取り除いて独立集合を維持したまま$k + 1$個以上の頂点を追加することができないとき,その独立集合を
-$k$-MISといい,ネットワーク上の$k$-MISを発見する$k$-MIS問題は集中型アルゴリズムによって$O(n^{k + 2})$時間で
-解くことができる.これは,$k = O(1)$のとき$n$の多項式時間になる.
+($k$-Maximal Independet Set, $k$-MIS)について考える.
+%独立集合のうち,$k$個の頂点をその集合から取り除いて独立集合を維持したまま$k + 1$個以上の頂点を
+%追加することができないとき,その独立集合を$k$-MISといい,
+ネットワーク上の$k$-MISを発見する$k$-MIS問題は集中型アルゴリズムによって$O(n^{k + 2})$時間で
+解くことができ,$k = O(1)$のとき$n$の多項式時間になる.
 
 今回は$k$-MISの検証問題(verification)に着目し,その複雑性について議論を行う.
 $k$-MIS検証問題とはネットワーク上に独立集合が与えられ,それが$k$-MISかどうかを判定する問題である.
@@ -83,7 +86,7 @@ $O(\log n)$ビットを双方向に伝送可能であり,各ノードは同一ラウンドに異なる接続辺に
 
 この枠組みにおける重要な問題として,交叉判定問題(set-disjointness)がある.この問題では,アリスとボブは
 それぞれ$X \in \{0, 1\}^{n}$と$Y \in \{0, 1\}^{n}$を入力として持ち,目的は
-$DISJ_{n} (X, Y) :=\bigwedge_{i = 1}^{n} X_{i} \land Y_{i}$を計算することである.nビットの交叉判定問題を解くために,
+$DISJ_{n} (X, Y) :=\bigvee_{i = 1}^{n} X_{i} \land Y_{i}$を計算することである.nビットの交叉判定問題を解くために,
 アリスとボブは通信によって$\Omega (n)$ビット交換する必要があることが知られており,この事実を用いて
 最小カット発見 \cite{ghaffari2013distributed} や部分グラフ検出 \cite{fischer2018possibilities} ,
 近似最大クリーク検出 \cite{czumaj2020detecting} といったさまざまな問題に対する下界の証明がされている.
@@ -99,21 +102,41 @@ $I$が$k$-極大独立集合 $ \Leftrightarrow$ \\
 \section{結果}
 スペースの都合上,3つの結果のうち,3-MIS検証問題に対する$\Omega (n)$ラウンドの下界の証明の概要を記載する.
 
-3-MIS検証問題を交叉判定問題から帰着する流れは次のとおりである.最初にアリスとボブ特殊なグラフ$G = (V, E)$の構築と
-$G$を$G_{A}=(V_{A}, E_{A})とG_{B}=(V_{B}, E_{B})$に分割するカット辺$C$の決定を行う.次に,アリスとボブは入力文字列に基づいて
-それぞれ$G_{A}$と$G_{B}$に辺を追加する.ここで,カット辺$C$は入力文字列に依存しない.グラフ$G$に辺を追加したグラフを
-$G' = (V, E')$とすると,「$G'$中に与えられている独立集合が,$DISJ_{n} (X, Y) = 1$のときのみ3-MISでない」という特性を
-持つように構築を行う.グラフ$G'$を図 \ref{lowerboundgraph}に示す.
+3-MIS検証問題を交叉判定問題から帰着する流れは次のとおりである.最初にアリスとボブは特殊なグラフ$G = (V, E)$の構築と
+$G$を$G_{A}$と$G_{B}$に分割するカット辺$C$の決定を行う.次に,アリスとボブは入力文字列に基づいて
+それぞれ$G_{A}$と$G_{B}$に辺$E_{A}$と$E_{B}$を追加する.ここで,カット辺$C$は入力文字列に依存しない.グラフ$G$に辺を追加したグラフを
+$G' = (V', E')$とすると$V' = V, E' = E \cap (E_{A} \cap E_{B})$表すことができ,「$G'$中に与えられている独立集合が,
+$DISJ_{N \times N} (X, Y) = 1$のときのみ3-MISでない」という特性を持つように構築を行う.グラフ$G'$を図 \ref{lowerboundgraph}に示す.
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=80mm]{testpic.png}
+\includegraphics[width=80mm]{graph3.png}
 \end{center}
 \caption{G'(V, E')}
 \label{lowerboundgraph}
 \end{figure}
 
-今回,$N \times N$ビットの交叉判定インスタンスをグラフに埋め込んでおり,カット辺のサイズ$|C| = 3N$であることがわかる.
+図中の頂点のうち,灰色のものは独立集合に含まれる頂点とする.図中で省略されている辺は次のとおりである.
+\begin{itemize}
+\item $A^{1}, A^{2}, B^{1}, B^{2}$はクリーク$K_{N}$
+%\item $\forall i, j((a_{i}^{1}, a_{j}^{1}), (a_{i}^{2}, a_{j}^{2}), (b_{i}^{1}, b_{j}^{1}), (b_{i}^{2}, b_{j}^{2})) \in E$
+\item $\forall i((a_{i}^{1}, c_{i}^{1}), (a_{i}^{2}, c_{i}^{2}), (b_{i}^{1}, c_{i}^{1}), (b_{i}^{2}, c_{i}^{2})) \in E$
+\item $\forall i((a_{i}^{1}, s), (a_{i}^{2}, s), (b_{i}^{1}, s), (b_{i}^{2}, s)) \in E$
+\item $(a_{i}^{1}, a_{j}^{2}) \in E_{A} \Leftrightarrow X_{i, j} = 0$, $(b_{i}^{1}, b_{j}^{2}) \in E_{B} \Leftrightarrow Y_{i, j} = 0$
+\end{itemize}
+
+このグラフが上記の特性を満たしていることを示すために,次の2点を確認する. \\
+(i)$DISJ_{N \times N} (X, Y) = 1$のとき,グラフに与えられている独立集合が3-MISでない: 
+$X_{i, j} = Y_{i, j} =1$とすると,$s$と$c_{i}^{1}$と$c_{j}^{2}$の3点を取り除いて$a_{i}^{1}$, $b_{i}^{1}$, $a_{j}^{2}$, $c_{j}^{2}$の
+4点を追加できることから確認できる. \\
+(ii)$DISJ_{N \times N} (X, Y) = 0$のとき,グラフに与えられている独立集合が3-MIS: 
+グラフに与えられている独立集合が3-MISでないと仮定する.このとき,ある3点を取り除くことで独立集合に追加できる4点が存在するが,
+$A^{1}, A^{2}, B^{1}, B^{2}$がそれぞれクリークであるため,4点を追加するためにはそれぞれから1点を選ぶ必要がある.
+$c_{i}^{1}$を取り除いて$a_{i}^{1}$と$b_{i}^{1}$を追加し,,$c_{j}^{2}$を取り除いて,$a_{j}^{2}$と$b_{j}^{2}$を独立集合に追加したとする.
+$a_{i}^{1}$と$a_{i}^{2}$が両方とも追加できるのは$X_{i, j} = 1$のときのみであり,$b_{i}^{1}$と$b_{i}^{2}$が両方とも追加できるのは
+$Y_{i, j} = 1$のときのみであるが,これは$DISJ_{N \times N} (X, Y) = 0$に矛盾する.したがってグラフに与えられている独立集合は3-MISである.
+
+今回,$N \times N$ビットの交叉判定インスタンスをグラフに埋め込んでおり,カット辺のサイズ$|C| = 4N$であることがわかる.
 アリスとボブは,このグラフ上に与えられた独立集合が3-MISであるかどうかを判定する分散アルゴリズムをシミュレートできる.
 2者間通信複雑性モデルでのシミュレートは,次のように実行される.$G_{A}$中の辺で送信されるメッセージ,あるいは
 $G_{B}$中の辺で送信されるメッセージは,アリスとボブがそれぞれお互いと通信せずにシミュレートできる.カット辺$C$を通じて
