アブストスライド完成

--- a/chukan/abst_chukan/syuron_abst_M2sato.tex
+++ b/chukan/abst_chukan/syuron_abst_M2sato.tex
@@ -81,12 +81,12 @@ $O(\log n)$ƒrƒbƒg‚ð‘o•ûŒü‚É“`‘—‰Â”\‚Å‚ ‚è,Šeƒm[ƒh‚Í“¯ˆêƒ‰ƒEƒ“ƒh‚ÉˆÙ‚È‚éÚ‘±•Ó‚É
 
 \subsection*{2ŽÒŠÔ’ÊM•¡ŽG«}
 2ŽÒŠÔ’ÊM•¡ŽG«‚Ì˜g‘g‚Ý‚Å‚Í,ƒAƒŠƒX‚Æƒ{ƒu‚Ì“ñl‚ÌƒvƒŒƒCƒ„[‚ª‚»‚ê‚¼‚ê$n$ƒrƒbƒg‚Ì0/1‚Ìƒf[ƒ^—ñ‚Å\¬‚³‚ê‚é
-ƒvƒ‰ƒCƒx[ƒg‚È“ü—Í$X$‚¨‚æ‚Ñ$Y$‚ðŽ‚Á‚Ä‚¢‚é‚Æ‚·‚é.ƒvƒŒƒCƒ„[‚Ì–Ú•W‚Í,Œ‹‡ŠÖ”$f(X, Y)$‚ðŒvŽZ‚·‚é‚±‚Æ‚Å‚ ‚è,
-•¡ŽG«‚ÌŽÚ“x‚Æ‚µ‚Ä$f(X, Y)$‚ðŒvŽZ‚·‚é‚½‚ß‚ÉƒAƒŠƒX‚Æƒ{ƒu‚ª’ÊM‚É‚æ‚Á‚ÄŒðŠ·‚·‚é•K—v‚Ì‚ ‚éƒrƒbƒg”‚ª—p‚¢‚ç‚ê‚é.
+ƒvƒ‰ƒCƒx[ƒg‚È“ü—Í$x$‚¨‚æ‚Ñ$y$‚ðŽ‚Á‚Ä‚¢‚é‚Æ‚·‚é.ƒvƒŒƒCƒ„[‚Ì–Ú•W‚Í,Œ‹‡ŠÖ”$f(x, y)$‚ðŒvŽZ‚·‚é‚±‚Æ‚Å‚ ‚è,
+•¡ŽG«‚ÌŽÚ“x‚Æ‚µ‚Ä$f(x, y)$‚ðŒvŽZ‚·‚é‚½‚ß‚ÉƒAƒŠƒX‚Æƒ{ƒu‚ª’ÊM‚É‚æ‚Á‚ÄŒðŠ·‚·‚é•K—v‚Ì‚ ‚éƒrƒbƒg”‚ª—p‚¢‚ç‚ê‚é.
 
 ‚±‚Ì˜g‘g‚Ý‚É‚¨‚¯‚éd—v‚È–â‘è‚Æ‚µ‚Ä,Œð³”»’è–â‘è(set-disjointness)‚ª‚ ‚é.‚±‚Ì–â‘è‚Å‚Í,ƒAƒŠƒX‚Æƒ{ƒu‚Í
-‚»‚ê‚¼‚ê$X \in \{0, 1\}^{n}$‚Æ$Y \in \{0, 1\}^{n}$‚ð“ü—Í‚Æ‚µ‚ÄŽ‚¿,–Ú“I‚Í
-$DISJ_{n} (X, Y) :=\bigvee_{i = 1}^{n} X_{i} \land Y_{i}$‚ðŒvŽZ‚·‚é‚±‚Æ‚Å‚ ‚é.nƒrƒbƒg‚ÌŒð³”»’è–â‘è‚ð‰ð‚­‚½‚ß‚É,
+‚»‚ê‚¼‚ê$x \in \{0, 1\}^{n}$‚Æ$y \in \{0, 1\}^{n}$‚ð“ü—Í‚Æ‚µ‚ÄŽ‚¿,–Ú“I‚Í
+$DISJ_{n} (x, y) :=\bigvee_{i = 1}^{n} x_{i} \land y_{i}$‚ðŒvŽZ‚·‚é‚±‚Æ‚Å‚ ‚é.nƒrƒbƒg‚ÌŒð³”»’è–â‘è‚ð‰ð‚­‚½‚ß‚É,
 ƒAƒŠƒX‚Æƒ{ƒu‚Í’ÊM‚É‚æ‚Á‚Ä$\Omega (n)$ƒrƒbƒgŒðŠ·‚·‚é•K—v‚ª‚ ‚é‚±‚Æ‚ª’m‚ç‚ê‚Ä‚¨‚è,‚±‚ÌŽ–ŽÀ‚ð—p‚¢‚Ä
 Å¬ƒJƒbƒg”­Œ© \cite{ghaffari2013distributed} ‚â•”•ªƒOƒ‰ƒtŒŸo \cite{fischer2018possibilities} ,
 ‹ßŽ—Å‘åƒNƒŠ[ƒNŒŸo \cite{czumaj2020detecting} ‚Æ‚¢‚Á‚½‚³‚Ü‚´‚Ü‚È–â‘è‚É‘Î‚·‚é‰ºŠE‚ÌØ–¾‚ª‚³‚ê‚Ä‚¢‚é.
@@ -106,7 +106,7 @@ $I$‚ª$k$-‹É‘å“Æ—§W‡ $ \Leftrightarrow$ \\
 $G$‚ð$G_{A}$‚Æ$G_{B}$‚É•ªŠ„‚·‚éƒJƒbƒg•Ó$C$‚ÌŒˆ’è‚ðs‚¤.ŽŸ‚É,ƒAƒŠƒX‚Æƒ{ƒu‚Í“ü—Í•¶Žš—ñ‚ÉŠî‚Ã‚¢‚Ä
 ‚»‚ê‚¼‚ê$G_{A}$‚Æ$G_{B}$‚É•Ó$E_{A}$‚Æ$E_{B}$‚ð’Ç‰Á‚·‚é.‚±‚±‚Å,ƒJƒbƒg•Ó$C$‚Í“ü—Í•¶Žš—ñ‚ÉˆË‘¶‚µ‚È‚¢.ƒOƒ‰ƒt$G$‚É•Ó‚ð’Ç‰Á‚µ‚½ƒOƒ‰ƒt‚ð
 $G' = (V', E')$‚Æ‚·‚é‚Æ$V' = V, E' = E \cap (E_{A} \cap E_{B})$•\‚·‚±‚Æ‚ª‚Å‚«,u$G'$’†‚É—^‚¦‚ç‚ê‚Ä‚¢‚é“Æ—§W‡‚ª,
-$DISJ_{N \times N} (X, Y) = 1$‚Ì‚Æ‚«‚Ì‚Ý3-MIS‚Å‚È‚¢v‚Æ‚¢‚¤“Á«‚ðŽ‚Â‚æ‚¤‚É\’z‚ðs‚¤.ƒOƒ‰ƒt$G'$‚ð} \ref{lowerboundgraph}‚ÉŽ¦‚·.
+$DISJ_{N \times N} (x, y) = 1$‚Ì‚Æ‚«‚Ì‚Ý3-MIS‚Å‚È‚¢v‚Æ‚¢‚¤“Á«‚ðŽ‚Â‚æ‚¤‚É\’z‚ðs‚¤.ƒOƒ‰ƒt$G'$‚ð} \ref{lowerboundgraph}‚ÉŽ¦‚·.
 
 \begin{figure}[h]
 \begin{center}
@@ -118,23 +118,23 @@ $DISJ_{N \times N} (X, Y) = 1$‚Ì‚Æ‚«‚Ì‚Ý3-MIS‚Å‚È‚¢v‚Æ‚¢‚¤“Á«‚ðŽ‚Â‚æ‚¤‚É\’z‚
 
 }’†‚Ì’¸“_‚Ì‚¤‚¿,ŠDF‚Ì‚à‚Ì‚Í“Æ—§W‡‚ÉŠÜ‚Ü‚ê‚é’¸“_‚Æ‚·‚é.}’†‚ÅÈ—ª‚³‚ê‚Ä‚¢‚é•Ó‚ÍŽŸ‚Ì‚Æ‚¨‚è‚Å‚ ‚é.
 \begin{itemize}
-\item $A^{1}, A^{2}, B^{1}, B^{2}$‚ÍƒNƒŠ[ƒN$K_{N}$
+\item $A^{1}, A^{2}, B^{1}, B^{2}$‚Í$N$’¸“_‚ÌƒNƒŠ[ƒN$K_{N}$
 %\item $\forall i, j((a_{i}^{1}, a_{j}^{1}), (a_{i}^{2}, a_{j}^{2}), (b_{i}^{1}, b_{j}^{1}), (b_{i}^{2}, b_{j}^{2})) \in E$
 \item $\forall i((a_{i}^{1}, c_{i}^{1}), (a_{i}^{2}, c_{i}^{2}), (b_{i}^{1}, c_{i}^{1}), (b_{i}^{2}, c_{i}^{2})) \in E$
 \item $\forall i((a_{i}^{1}, s), (a_{i}^{2}, s), (b_{i}^{1}, s), (b_{i}^{2}, s)) \in E$
-\item $(a_{i}^{1}, a_{j}^{2}) \in E_{A} \Leftrightarrow X_{i, j} = 0$, $(b_{i}^{1}, b_{j}^{2}) \in E_{B} \Leftrightarrow Y_{i, j} = 0$
+\item $(a_{i}^{1}, a_{j}^{2}) \in E_{A} \Leftrightarrow x_{i, j} = 0$, $(b_{i}^{1}, b_{j}^{2}) \in E_{B} \Leftrightarrow y_{i, j} = 0$
 \end{itemize}
 
 ‚±‚ÌƒOƒ‰ƒt‚ªã‹L‚Ì“Á«‚ð–ž‚½‚µ‚Ä‚¢‚é‚±‚Æ‚ðŽ¦‚·‚½‚ß‚É,ŽŸ‚Ì2“_‚ðŠm”F‚·‚é. \\
-(i)$DISJ_{N \times N} (X, Y) = 1$‚Ì‚Æ‚«,ƒOƒ‰ƒt‚É—^‚¦‚ç‚ê‚Ä‚¢‚é“Æ—§W‡‚ª3-MIS‚Å‚È‚¢: 
+(i)$DISJ_{N \times N} (x, y) = 1$‚Ì‚Æ‚«,ƒOƒ‰ƒt‚É—^‚¦‚ç‚ê‚Ä‚¢‚é“Æ—§W‡‚ª3-MIS‚Å‚È‚¢: 
 $X_{i, j} = Y_{i, j} =1$‚Æ‚·‚é‚Æ,$s$‚Æ$c_{i}^{1}$‚Æ$c_{j}^{2}$‚Ì3“_‚ðŽæ‚èœ‚¢‚Ä$a_{i}^{1}$, $b_{i}^{1}$, $a_{j}^{2}$, $c_{j}^{2}$‚Ì
 4“_‚ð’Ç‰Á‚Å‚«‚é‚±‚Æ‚©‚çŠm”F‚Å‚«‚é. \\
-(ii)$DISJ_{N \times N} (X, Y) = 0$‚Ì‚Æ‚«,ƒOƒ‰ƒt‚É—^‚¦‚ç‚ê‚Ä‚¢‚é“Æ—§W‡‚ª3-MIS: 
+(ii)$DISJ_{N \times N} (x, y) = 0$‚Ì‚Æ‚«,ƒOƒ‰ƒt‚É—^‚¦‚ç‚ê‚Ä‚¢‚é“Æ—§W‡‚ª3-MIS: 
 ƒOƒ‰ƒt‚É—^‚¦‚ç‚ê‚Ä‚¢‚é“Æ—§W‡‚ª3-MIS‚Å‚È‚¢‚Æ‰¼’è‚·‚é.‚±‚Ì‚Æ‚«,‚ ‚é3“_‚ðŽæ‚èœ‚­‚±‚Æ‚Å“Æ—§W‡‚É’Ç‰Á‚Å‚«‚é4“_‚ª‘¶Ý‚·‚é‚ª,
 $A^{1}, A^{2}, B^{1}, B^{2}$‚ª‚»‚ê‚¼‚êƒNƒŠ[ƒN‚Å‚ ‚é‚½‚ß,4“_‚ð’Ç‰Á‚·‚é‚½‚ß‚É‚Í‚»‚ê‚¼‚ê‚©‚ç1“_‚ð‘I‚Ô•K—v‚ª‚ ‚é.
 $c_{i}^{1}$‚ðŽæ‚èœ‚¢‚Ä$a_{i}^{1}$‚Æ$b_{i}^{1}$‚ð’Ç‰Á‚µ,,$c_{j}^{2}$‚ðŽæ‚èœ‚¢‚Ä,$a_{j}^{2}$‚Æ$b_{j}^{2}$‚ð“Æ—§W‡‚É’Ç‰Á‚µ‚½‚Æ‚·‚é.
-$a_{i}^{1}$‚Æ$a_{i}^{2}$‚ª—¼•û‚Æ‚à’Ç‰Á‚Å‚«‚é‚Ì‚Í$X_{i, j} = 1$‚Ì‚Æ‚«‚Ì‚Ý‚Å‚ ‚è,$b_{i}^{1}$‚Æ$b_{i}^{2}$‚ª—¼•û‚Æ‚à’Ç‰Á‚Å‚«‚é‚Ì‚Í
-$Y_{i, j} = 1$‚Ì‚Æ‚«‚Ì‚Ý‚Å‚ ‚é‚ª,‚±‚ê‚Í$DISJ_{N \times N} (X, Y) = 0$‚É–µ‚‚·‚é.‚µ‚½‚ª‚Á‚ÄƒOƒ‰ƒt‚É—^‚¦‚ç‚ê‚Ä‚¢‚é“Æ—§W‡‚Í3-MIS‚Å‚ ‚é.
+$a_{i}^{1}$‚Æ$a_{i}^{2}$‚ª—¼•û‚Æ‚à’Ç‰Á‚Å‚«‚é‚Ì‚Í$x_{i, j} = 1$‚Ì‚Æ‚«‚Ì‚Ý‚Å‚ ‚è,$b_{i}^{1}$‚Æ$b_{i}^{2}$‚ª—¼•û‚Æ‚à’Ç‰Á‚Å‚«‚é‚Ì‚Í
+$y_{i, j} = 1$‚Ì‚Æ‚«‚Ì‚Ý‚Å‚ ‚é‚ª,‚±‚ê‚Í$DISJ_{N \times N} (x, y) = 0$‚É–µ‚‚·‚é.‚µ‚½‚ª‚Á‚ÄƒOƒ‰ƒt‚É—^‚¦‚ç‚ê‚Ä‚¢‚é“Æ—§W‡‚Í3-MIS‚Å‚ ‚é.
 
 ¡‰ñ,$N \times N$ƒrƒbƒg‚ÌŒð³”»’èƒCƒ“ƒXƒ^ƒ“ƒX‚ðƒOƒ‰ƒt‚É–„‚ßž‚ñ‚Å‚¨‚è,ƒJƒbƒg•Ó‚ÌƒTƒCƒY$|C| = 4N$‚Å‚ ‚é‚±‚Æ‚ª‚í‚©‚é.
 ƒAƒŠƒX‚Æƒ{ƒu‚Í,‚±‚ÌƒOƒ‰ƒtã‚É—^‚¦‚ç‚ê‚½“Æ—§W‡‚ª3-MIS‚Å‚ ‚é‚©‚Ç‚¤‚©‚ð”»’è‚·‚é•ªŽUƒAƒ‹ƒSƒŠƒYƒ€‚ðƒVƒ~ƒ…ƒŒ[ƒg‚Å‚«‚é.
@@ -144,7 +144,7 @@ $G_{B}$’†‚Ì•Ó‚Å‘—M‚³‚ê‚éƒƒbƒZ[ƒW‚Í,ƒAƒŠƒX‚Æƒ{ƒu‚ª‚»‚ê‚¼‚ê‚¨ŒÝ‚¢‚Æ’ÊM‚¹‚¸‚ÉƒV
 “Æ—§W‡‚ª3-MIS‚Å‚ ‚é‚©‚Ç‚¤‚©‚ð$r$ƒ‰ƒEƒ“ƒh‚Å”»’è‚·‚éƒAƒ‹ƒSƒŠƒYƒ€$\mathcal{A}$‚ª‘¶Ý‚µ‚½‚Æ‚·‚é‚Æ,ƒAƒŠƒX‚Æƒ{ƒu‚Í
 $O(r \cdot |C| \cdot b)$ƒrƒbƒg’ÊM‚µ‚½‚±‚Æ‚É‚È‚é.‚±‚ÌƒOƒ‰ƒt‚É‚¨‚¢‚ÄƒAƒ‹ƒSƒŠƒYƒ€$\mathcal{A}$‚ðŽÀs‚·‚é‚Æ“¯Žž‚É
 2ŽÒŠÔŒð³”»’è–â‘è‚à‰ð‚¯‚Ä‚¢‚é‚±‚Æ‚É‚È‚é‚Ì‚Å,Œð³”»’è–â‘è‚Ì’ÊM•¡ŽG«‚æ‚èƒAƒŠƒX‚Æƒ{ƒu‚Í­‚È‚­‚Æ‚à
-$\Omega (N \times N)$ƒrƒbƒg‚Í’ÊM‚µ‚Ä‚¢‚é‚Í‚¸‚Å‚ ‚é.‚µ‚½‚ª‚Á‚Ä,$r = \Omega (N/3b) = \tilde{\Omega}(n)$ƒ‰ƒEƒ“ƒh‚Ì
+$\Omega (N \times N)$ƒrƒbƒg‚Í’ÊM‚µ‚Ä‚¢‚é‚Í‚¸‚Å‚ ‚é.‚µ‚½‚ª‚Á‚Ä,$r = \Omega (N/4b) = \tilde{\Omega}(n)$ƒ‰ƒEƒ“ƒh‚Ì
 ‰ºŠE‚ð“¾‚é‚±‚Æ‚ª‚Å‚«‚é.
 
 \section{¡Œã‚Ì‰Û‘è}
